--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,19 @@ body {
   background-color: var(--secondary-color);
 }
 
+.content-layout {
+  min-width: 20em;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0em 0.3em 0.8em rgba(0, 0, 0, 0.1);
+}
+
 .header {
   position: relative;
   width: 100%;
+  max-width: 61.875em;
   height: 4.5em;
   margin: 0 auto;
-  background-color: #ffffff;
-  box-shadow: 0em 0.3em 0.8em rgba(0, 0, 0, 0.1);
   overflow-y: hidden;
   transition: height 0.6s linear;
 }
@@ -85,4 +91,61 @@ body {
 
 .title-button__icon {
   font-size: 2.5rem;
+  transition: transform 0.6s linear;
+}
+
+@media screen and (width >= 771px) {
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1em;
+    height: max-content;
+  }
+  .title-button__button {
+    display: none;
+  }
+
+  .header__title-button {
+    width: max-content;
+    padding: 0;
+  }
+
+  .header__nav-routes {
+    width: max-content;
+  }
+
+  .nav-routes__list {
+    flex-direction: row;
+  }
+
+  .nav-routes__link {
+    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out,
+      padding 0.3s ease-in-out;
+  }
+
+  .nav-routes__link:hover {
+    padding: 0.5em 1em;
+    background-color: #ffffff;
+    color: var(--primary-color);
+  }
+
+  .header__nav-socials {
+    display: block;
+  }
+
+  .nav-socials__list {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5em;
+    list-style: none;
+  }
+
+  .nav-socials__icon {
+    font-size: 1.5rem;
+    color: var(--primary-color);
+  }
+  .nav-socials__icon:hover {
+    filter: brightness(1.1);
+  }
 }
